	template.

	* etc/template/setup.hint: Adjust comments

	* bin/cygbuild.sh:
	(CygbuildBootVariablesGlobalMain):
	CYGBUILD_DIFF_OPTIONS: Ignore config.status.
	(CygbuildCommandMain): Add alias 'pchk' as 'patch-check'.
	(CygbuildCmdInstallCheckSetupHint):
	Fix 'setup.hint category should include...'. The
	awk variable 'line' was replaced with correct '$0'.

2007-11-29  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstalInfo): Added quotes
	and removed extra $(ls ...) call. Not neeed in for-loop.

2007-11-06  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:(CygbuildCmdInstallCheckSetupHintx):
	Improve ldesc: double quote check.

2007-11-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckSetupHint):
	Add check for finding double quotes from ldesc: portion.

2007-10-29  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildVersionInfo): Add support for
	foo_V1.1, foo-1.1-rc1
	* bin/cygbuild.pl (Version): Add support for
	foo_V1.1, foo-1.1-rc1

2007-10-28  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/package.README: Remove 'Other version' tag
	from the end.

2007-10-27  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/Makefile.tmp (install): Replace
	$(PACKAGE) target with 'all'.
	(EXE): Fix rule to use $OBJS, not $SRCS

2007-10-26  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallExtraManualCompress):
	Remove find(1) calls from if-statements. This fixes bug,
	where function got stalled, because there was no files
	to compress.
	(CygbuildCmdInstallCheckCygpatchDirectory): Ignore
	*.tmp and *[#~] files from whitespace check.
	(CygbuildMakefileRunInstall): If there is no Makefile,
	Call CygbuildNoticeBuilddirMaybe() first.
	(CygbuildCmdInstallCheckDirStructure): Added /use/share/
	content check.

2007-10-18  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/*: Change all 'Your Name' phrases to
	'Firstname Lastname'.
